<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/login_page_toolbar"></include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="136dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lemail"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="206dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lpassword"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        tools:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="358dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="82dp"
        android:text="Login"
        android:textStyle="bold"
        tools:textColor="#000000"
        tools:textSize="24sp" />
</RelativeLayout>